--- a/src/demo/demo.css
+++ b/src/demo/demo.css
@@ -25,6 +25,46 @@ body {
     left: 0;
 }
 
+#blockly-div .blocklyToolboxContents {
+    padding: 0.5em;
+}
+
+#blockly-div .blocklyToolboxCategory {
+    margin-bottom: 5px;
+}
+
+/* Custom toolbox CSS */
+.demo-row-icon {
+    display: block;
+    font-size: 32px;
+    width: 32px;
+    height: 32px;
+    overflow: hidden;
+    color: white;
+}
+
+.demo-row-label {
+    display: block;
+    font-size: 14px;
+    color: white;
+    font-family: sans-serif;
+    margin-top: 4px;
+}
+
+.demo-row-container {
+    display: flex;
+    border-radius: 4px;
+}
+
+.demo-row-contents-container {
+    padding: 4px;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Split JS CSS */
 .split {
     display: flex;
@@ -58,6 +98,7 @@ body {
 #code {
     height: 100%;
     overflow: auto;
+    font-size: 10pt;
 }
 
 /* Copy JS CSS */
@@ -65,4 +106,20 @@ body {
     position: absolute;
     top: 5px;
     right: 5px;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    font-family: sans-serif;
+    font-size: 14px;
+    background-color: rgb(91, 165, 140);
+    color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+/* Toast CSS */
+.toast {
+    font-family: sans-serif;
+    font-size: 14px;
+    background-color: rgb(91, 165, 140);
+    box-shadow: none !important;
 }
