--- a/src/demo/demo.css
+++ b/src/demo/demo.css
@@ -1,5 +1,6 @@
 html,
-body {
+body,
+.container {
     width: 100vw;
     height: 100vh;
     min-width: 100vw;
@@ -8,6 +9,39 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.demo-header {
+    padding: 0.5em;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.demo-title {
+    font-family: monospace;
+    font-size: 12px;
+    flex: 1;
+}
+
+.demo-subtitle {
+    font-family: sans-serif;
+    font-size: 12px;
+}
+
+.demo-subtitle a {
+    text-decoration: none;
+    color: teal;
+}
+
+.demo-app {
+    flex: 1;
 }
 
 #blockly-div-wrapper {
